--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,16 @@
         }
     ],
     "require": {
-        "php": "^5.5.9 || ^7.0",
-        "illuminate/support": "~5.1",
-        "illuminate/console": "~5.1",
-        "illuminate/filesystem": "~5.1"
+       "php": ">=7.0.0",
+        "illuminate/support": "~6.0",
+        "illuminate/console": "~6.0",
+        "illuminate/filesystem": "~6.0"
     },
     "require-dev": {
-        "phpunit/phpunit" : "^4.8 || ^5.0",
+          "phpunit/phpunit": "^8.0"
         "orchestra/testbench": "~3.0",
         "orchestra/database": "~3.0",
-        "mockery/mockery": "~0.9.4"
+          "mockery/mockery": "^1.0",
     },
     "autoload": {
         "psr-4": {
