--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
           "phpunit/phpunit": "^8.0"
         "orchestra/testbench": "~3.0",
         "orchestra/database": "~3.0",
-          "mockery/mockery": "^1.0",
+          "mockery/mockery": "^1.0"
     },
     "autoload": {
         "psr-4": {
