--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "illuminate/filesystem": "~6.0"
     },
     "require-dev": {
-          "phpunit/phpunit": "^8.0"
-        "orchestra/testbench": "~3.0",
+          "phpunit/phpunit": "^8.0",
+            "orchestra/testbench": "~3.0",
         "orchestra/database": "~3.0",
           "mockery/mockery": "^1.0"
     },
