--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,16 @@
     ],
     "require": {
        "php": ">=7.0.0",
-        "illuminate/support": "~6.0",
-        "illuminate/console": "~6.0",
-        "illuminate/filesystem": "~6.0"
+        "illuminate/support": "~6.2",
+        "illuminate/console": "~6.2",
+        "illuminate/filesystem": "~6.2"
     },
     "require-dev": {
           "phpunit/phpunit": "^8.0",
             "orchestra/testbench": "~4.0",
         "orchestra/database": "~4.0",
-          "mockery/mockery": "^1.0"
+       "mockery/mockery":     "^1.0",
+     "phpunit/phpunit": "^8.2"
     },
     "autoload": {
         "psr-4": {
