--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,16 @@
     ],
     "require": {
        "php": ">=7.0.0",
-        "illuminate/support": "~6.2",
-        "illuminate/console": "~6.2",
-        "illuminate/filesystem": "~6.2"
+        "illuminate/support": "~7.0",
+        "illuminate/console": "~7.0",
+        "illuminate/filesystem": "~7.0"
     },
     "require-dev": {
           "phpunit/phpunit": "^8.0",
-            "orchestra/testbench": "~4.0",
+            "orchestra/testbench": "5.0",
         "orchestra/database": "~4.0",
-       "mockery/mockery":     "^1.0",
-     "phpunit/phpunit": "^8.2"
+      "mockery/mockery": "^1.3",
+    "phpunit/phpunit": "^8.4|^9.0"
     },
     "autoload": {
         "psr-4": {
